# agents-playground

./: .gitignore  LICENSE  Makefile  README.md  Todo.md  demo.py  devbox.json  mypy.ini  parrallel_spike.py  pyproject.toml  requirements.txt  setup.cfg
Agent Playground/Agent Playground.xcodeproj/: project.pbxproj
agents_playground/: __init__.py  __main__.py  agent.py  direction.py  logger.py  main.py  observe.py  path.py  playground_app.py  profile_tools.py  pulsing_circle_sim.py  simulation.py  single_agent_simulation.py  structures.py
agents_playground/actions/: agent_action.py  agent_step.py  idle_step.py
agents_playground/agents/: agent.py  agent_action_state_transition_registry.py  agent_like.py  agent_spec.py  default_agent.py  direction.py  no_agent.py  path.py  structures.py  utilities.py
agents_playground/app/: create_sim_wizard.py  main.py  options.py  playground.py  playground_app.py
agents_playground/cameras/: camera.py
agents_playground/console/: key_listener.py  lexer.py
agents_playground/containers/: attr_dict.py  dual_indexer.py  multi_indexed_container.py  taggable_multi_indexed_container.py  ttl_store.py  types.py
agents_playground/core/: callable_utils.py  constants.py  counter.py  duration_metrics_collector.py  event_based_simulation.py  event_loop.py  location_utilities.py  observe.py  performance_metrics.py  performance_monitor.py  playground_app.py  polling_queue.py  priority_queue.py  privileged.py  profile_tools.py  samples.py  scheduler.py  sim_loader.py  sim_loop.py  sim_rewrite.py  simulation.py  simulation_old.py  simulation_performance.py  task_based_simulation.py  task_driven_simulation.py  task_scheduler.py  time_utilities.py  types.py  waiter.py  webgpu_landscape_editor.py  webgpu_sim_loop.py  webgpu_simulation.py
agents_playground/counter/: counter.py  flexible_counter.py
agents_playground/debugger/: geometry_debugger.py
agents_playground/entities/: entities_registry.py  our_town_entities.py  pulsing_circle.py
agents_playground/fp/: __init__.py  containers.py  containters.py  functions.py
agents_playground/funcs/: __init__.py
agents_playground/gpu/: per_frame_data.py  task_driven_renderer.py
agents_playground/id/: __init__.py
agents_playground/landscape/: landscape.py  tile.py
agents_playground/likelihood/: coin.py  coin_registry.py  fair_coin.py  weighted_coin.py
agents_playground/loaders/: __init__.py  agent_definition_loader.py  edge_mesh.py  landscape_loader.py  mesh.py  obj_loader.py  scene_loader.py  tasks_loader.py  triangle_mesh.py
agents_playground/navigation/: navigation_mesh.py  navigator.py  waypoint.py
agents_playground/paths/: agent_path.py  circular_path.py  interpolated_path.py  linear_path.py
agents_playground/project/: constants.py  create_sim_wizard.py  create_sim_wizard_ui_components.py  extensions.py  input_processors.py  new_sim_window.py  project_builder.py  project_template_options.py
agents_playground/projects/: new_simulation_builder.py  project_loader.py  simulation_template_options.py  template_file.py
agents_playground/renderers/: agent.py  circle.py  color.py  console.py  entities.py  grid.py  nav_mesh.py  our_town_renderers.py  path.py  renderers_registry.py  scene.py  stats.py
agents_playground/scene/: __init__.py  id_map.py  scene.py  scene_builder.py  scene_characteristics.py  scene_defaults.py  scene_file_characteristics.py  scene_parser.py  scene_reader.py  types.py
agents_playground/sims/: agent.py  direction.py  event_based_agents.py  multiple_agents_sim.py  our_town.toml  our_town_nav_mesh.toml  path.py  pulsing_circle_sim.py  pulsing_circle_sim.toml  simple_movement.toml  single_agent_simulation.py
agents_playground/simulation/: context.py  render_layer.py  sim_events.py  sim_state.py  simulation_context_builder.py  statistics.py  tag.py  types.py
agents_playground/templates/new_project/: Makefile  README.md  pyproject.toml  scene.toml
agents_playground/templates/new_project/dev/: shell.nix
agents_playground/templates/new_project/project_pkg/: __init__.py
agents_playground/templates/new_project/tests/: simulation_test.py
benchmarks/: scheduler.py
demo/a_star_navigation/: README.md  pyproject.toml  requirements.txt  scene.toml
demo/a_star_navigation/a_star_navigation/: __init__.py  agent_movement.py  agent_states.py  entities.py  generate_agents.py  renderers.py  scene.toml
demo/a_star_navigation/project_pkg/: __init__.py  agent_movement.py  renderers.py
demo/a_star_navigation/tests/: sim_test.py
dev/: init.lua  shell.nix
docs/: benchmarks.md  creating_sims.md  debugging.md  decisions_log.md  dependencies.md  features.txt  profiling.md  testing.md
poc/pyside_webgpu/: Makefile  README.md  pyproject.toml
poc/pyside_webgpu/pyside_webgpu/: __main__.py  shadertoy.py
poc/pyside_webgpu/pyside_webgpu/app/: main.py  options.py
poc/pyside_webgpu/pyside_webgpu/demos/gltf/: example_pipeline.py  naive_gltf_loader.py  simple_shader.frag.wgsl  simple_shader.vert.wgsl  ui.py  white_model.frag.wgsl  white_model.vert.wgsl
poc/pyside_webgpu/pyside_webgpu/demos/pyside/: simple_triangle.py
poc/pyside_webgpu/pyside_webgpu/demos/shaders/: triangle.wgsl
poc/pyside_webgpu/pyside_webgpu/demos/wx/: debug.py  playground_ui.py  simple_triangle.py  wx_patch.py
targets/: benchmark.mk  build.mk  debugging.mk  demo.mk  doc.mk  env.mk  format.mk  help.mk  help.txt  profile.mk  run.mk  shell.mk  stats.mk  tests.mk  todo.mk  typing.mk
tests/: my_test.py  observe_test.py  playground_app_test.py  simulation_test.py
(+483 files in other folders)
