[tool.poetry]
name = "agents-playground"
version = "0.1.0"
description = "An autonomous agent prototyping environment."
authors = ["Samuel Holloway <sholloway@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sholloway/agents-playground"
keywords = ["agents", "simulation"]

[tool.poetry.scripts]
agents = "agents_playground.main:main"

[tool.poetry.dependencies]
python = "^3.11.1"
dearpygui = "^1.8.0"
psutil = "^5.9.2"
more-itertools = "^9.1.0"
mypy = "1.5.1"

[tool.poetry.dev-dependencies]
mypy = "^1.5.1"
pudb = "^2022.1.3"
py-spy = "^0.3.14"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
bpython = "^0.24"
pytest-cov = "^4.0.0"
pdoc = "^12.3.01"
matplotlib = "^3.7.1"
line-profiler = "^4.0.3"

[tool.poetry.group.dev.dependencies]
pytest-benchmark = "^4.0.0"
pygal = "^3.0.0"
pygaljs = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
console_output_style = "count"