[tool.poetry]
name = "agents-playground"
version = "0.1.0"
description = "An autonomous agent prototyping environment."
authors = ["Samuel Holloway <sholloway@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sholloway/agents-playground"
keywords = ["agents", "simulation"]

[tool.poetry.scripts]
agents = "agents_playground.main:main"

[tool.poetry.dependencies]
python = "^3.11.1"
dearpygui = "1.10.0"
more-itertools = "10.1.0"
mypy = "1.7.0"
psutil = "5.9.6"
wxpython = "^4.2.1"
wgpu = "^0.11.0"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
# line-profiler = "^4.0.3"
matplotlib = "^3.7.1"
mypy = "^1.5.1"
pudb = "^2022.1.3"
pdoc = "^12.3.01"
py-spy = "^0.3.14"
pygal = "^3.0.0"
pygaljs = "^1.0.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
console_output_style = "count"