[tool.poetry]
name = "agents-playground"
version = "0.2.0"
description = "An autonomous agent prototyping environment."
authors = ["Samuel Holloway <sholloway@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sholloway/agents-playground"
keywords = ["agents", "simulation"]

[tool.poetry.scripts]
agents = "agents_playground.main:main"

[tool.poetry.dependencies]
python = "^3.11.6"
dearpygui = "1.10.0" # Preventing going to 3.12. Issue #2193.
more-itertools = "10.1.0"
psutil = "5.9.6"
wxpython = "^4.2.1"
wgpu = "^0.13.0"
mypy = "1.7.1"
jsonschema = "^4.21.1"
deprecated = "^1.2.14"

[tool.poetry.group.dev.dependencies]
# These tools are having challenges with installing in a nix 
# based environment. The solution is to exit out of the nix shell
# uncomment the below dependencies, do a poetry install, then 
# reactivate the nix shell.
bpython = "^0.24" 
line-profiler = "^4.0.3" 
pudb = "^2023.1"

# These dependencies do not need to be compiled.
mypy = "^1.7.1"
pdoc = "^14.1.0"
py-spy = "^0.3.14"
pygal = "3.0.4"
pygaljs = "^1.0.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
console_output_style = "count"

[tool.pyright]
# Added to surpress a warning from the Python Language Server.