[tool.poetry]
name = "a-star-navigation"
version = "0.1.0"
description = "A demo for the Agent's Playground that demonstrates A* navigation."
authors = ["Samuel Holloway <sholloway@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.1"

[tool.poetry.dev-dependencies]
py-spy = "^0.3.14"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
agents-playground = {path = "../../dist/agents_playground-0.1.0-py3-none-any.whl", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
console_output_style = "count"