[tool.poetry]
name = "project_pkg"
version = "0.1.0"
description = "A new simulation for the Agent's Playground."
authors = []

[tool.poetry.dependencies]
python = "^3.11.1"

[tool.poetry.group.dev.dependencies]
py-spy = "^0.3.14"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
agents-playground = {path = "./libs/agents_playground-0.1.0-py3-none-any.whl", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
console_output_style = "count"